# bowling-game-python

./: README.md  pyproject.toml
.github/workflows/: main.yml
bowling_game_python/: __init__.py  ball.py  errors.py  frame.py  game.py  pins.py  utils.py
tests/: conftest.py  test_ball.py  test_frame.py  test_game.py  test_pins.py
