[tool.poetry]
name = "bowling-game-python"
version = "0.1.0"
description = ""
authors = ["chbndrhnns <chbndrhnns@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
